# AIVORelay

./: package.json
.github/workflows/: linux-build.yml  remote.yml
src-tauri/: Cargo.toml  tauri.conf.json
